Fix the image to it's right position and edit the spacing around elements

--- a/profile-card-component-main/styles.css
+++ b/profile-card-component-main/styles.css
@@ -21,33 +21,55 @@ body {
     width: 300px;
     background-color: white;
     border-radius: 10px;
+    overflow: hidden;
 }
 
+.image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 150px;
+    position: relative;
+    background-color: blue;
+}
 
+.image img {
+    border-radius: 50%;
+    border: 5px solid white;
+    position: absolute;
+    top: 65%;
+}
 
-.profile {
+.name {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 20px;
+    margin: 60px 0 10px;
 }
-
-.profile img {
-    border-radius: 50%;
-}
-
-.profile span {
+.name span {
     display: flex;
     gap: 10px;
 }
 
-.profile span p, .location {
+.name span p, .location {
     color: hsl(227, 10%, 46%);
+}
+
+.location {
+    margin-bottom: 10px;
+}
+
+.art {
+    width: auto;
+    height: 50%;
+    background-color: blue;
 }
 
 hr {
     color: hsl(227, 10%, 46%);
+    opacity: 0.3;
     font-size: 1px;
 }
 .metrics {
@@ -60,6 +82,11 @@ hr {
 
 .metrics span {
    text-align: center;
+}
+
+.metrics p {
+    color: hsl(227, 10%, 46%);
+    opacity: 0.8;
 }
 
 
